[artf498710] -  When we try to minimize the welcome to phreso page, the text contents are getting overlapped from the original allignment issue fixed, [artf489138] - While Clicking Settings check box in Build popup box it should show there is no Configuration in settings..(if there is no environment in Settings) issue fixed.

--- a/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
+++ b/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
@@ -4848,3 +4848,8 @@ a[id='androidSigning']:hover {
     float: right;
     margin-right: 10px;
 }
+	
+.runagint_source {
+	float: right;
+	width: auto;
+}
